unpackaged/main/default/objects/Opportunity/fields/Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Zip_Code__c</fullName>
    <label>Address (Zip Code)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>