unpackaged/main/default/objects/Opportunity/fields/AFC_AC_MC_Growth_Code_Conversion__c.field-meta.xml
<CustomField>
    <fullName>AFC_AC_MC_Growth_Code_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AFC Strategic Initiative for AC/MC Growth/Code Conversion</description>
    <inlineHelpText>AFC Strategic Initiative for AC/MC Growth/Code Conversion</inlineHelpText>
    <label>AFC AC/MC Growth/Code Conversion</label>
    <type>Checkbox</type>
</CustomField>