unpackaged/main/default/objects/Opportunity/fields/AFC_ACS_Modular_Growth__c.field-meta.xml
<CustomField>
    <fullName>AFC_ACS_Modular_Growth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AFC Strategic Initiative for ACS Modular growth.</description>
    <inlineHelpText>AFC Strategic Initiative for ACS Modular growth.</inlineHelpText>
    <label>AFC ACS Modular Growth</label>
    <type>Checkbox</type>
</CustomField>