unpackaged/main/default/objects/Opportunity/fields/AFC_Feeders__c.field-meta.xml
<CustomField>
    <fullName>AFC_Feeders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AFC Strategic Initiative for Feeders.</description>
    <inlineHelpText>AFC Strategic Initiative for Feeders.</inlineHelpText>
    <label>AFC Feeders</label>
    <type>Checkbox</type>
</CustomField>