unpackaged/main/default/objects/Opportunity/fields/AFC_Flex_LT_Growth__c.field-meta.xml
<CustomField>
    <fullName>AFC_Flex_LT_Growth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AFC Strategic Initiative for Flex &amp; LT Growth</description>
    <inlineHelpText>AFC Strategic Initiative for Flex &amp; LT Growth</inlineHelpText>
    <label>AFC Flex/LT Growth</label>
    <type>Checkbox</type>
</CustomField>