unpackaged/main/default/objects/Opportunity/fields/AFC_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AFC_Opportunity__c</fullName>
    <description>Specifies if Electrical Opportunity is for AFC product.</description>
    <inlineHelpText>Specifies if Electrical Opportunity is for AFC product.</inlineHelpText>
    <label>AFC Opportunity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>