unpackaged/main/default/objects/Opportunity/fields/AFC_West_Coast_Expansion__c.field-meta.xml
<CustomField>
    <fullName>AFC_West_Coast_Expansion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AFC Strategic Initiative for West Coast Expansion</description>
    <inlineHelpText>AFC Strategic Initiative for West Coast Expansion</inlineHelpText>
    <label>AFC West Coast Expansion</label>
    <type>Checkbox</type>
</CustomField>