unpackaged/main/default/objects/Opportunity/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Atkore Agency Entering Opportunity</inlineHelpText>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Agency)</relationshipLabel>
    <relationshipName>Opportunities_Agency</relationshipName>
    <type>Lookup</type>
</CustomField>