unpackaged/main/default/objects/Opportunity/fields/Agency_Field_Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agency_Field_Sales_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field Sales Contact at the Sales Agency associated with this opportunity</description>
    <inlineHelpText>Field Sales Contact at the Sales Agency associated with this opportunity</inlineHelpText>
    <label>Agency Field Sales Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Agency Field Sales Contact)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>