unpackaged/main/default/objects/Opportunity/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to agent specified on opportunity</description>
    <inlineHelpText>Select &quot;Partner User&quot; before searching for Agent Name</inlineHelpText>
    <label>Agent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria (AGENT)</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Atkore Agent Community</value>
        </filterItems>
        <filterItems>
            <field>User.Contact.Contact_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>AgentOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>