unpackaged/main/default/objects/Opportunity/fields/Agent_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agent_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person entering the Opportunity</description>
    <inlineHelpText>Person entering the Opportunity</inlineHelpText>
    <label>Entered By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Agency Contact</value>
        </filterItems>
        <infoMessage>Person entering the Opportunity</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>