unpackaged/main/default/objects/Opportunity/fields/Agent_Number__c.field-meta.xml
<CustomField>
    <fullName>Agent_Number__c</fullName>
    <description>Identifies the agent number for the opportunity</description>
    <inlineHelpText>Identifies the agent number for the opportunity</inlineHelpText>
    <label>Agent Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>