unpackaged/main/default/objects/Opportunity/fields/AHJ__c.field-meta.xml
<CustomField>
    <fullName>AHJ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AHJ (Authority Having Jurisdiction)</description>
    <inlineHelpText>AHJ (Authority Having Jurisdiction)</inlineHelpText>
    <label>AHJ</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (AHJ)</relationshipLabel>
    <relationshipName>AHJ</relationshipName>
    <type>Lookup</type>
</CustomField>