unpackaged/main/default/objects/Opportunity/fields/Approved_Engineering_Request_forms__c.field-meta.xml
<CustomField>
    <fullName>Approved_Engineering_Request_forms__c</fullName>
    <label>Approved Engineering Request forms</label>
    <summaryFilterItems>
        <field>Engineering_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Engineering_Request__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>