unpackaged/main/default/objects/Opportunity/fields/Atkore_Quote__c.field-meta.xml
<CustomField>
    <fullName>Atkore_Quote__c</fullName>
    <description>Quote number</description>
    <label>Atkore Quote #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>