unpackaged/main/default/objects/Opportunity/fields/Attached_PO_Contract_or_commitment__c.field-meta.xml
<CustomField>
    <fullName>Attached_PO_Contract_or_commitment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attached PO, Contract, or commitment</label>
    <type>Checkbox</type>
</CustomField>