unpackaged/main/default/objects/Opportunity/fields/Attached_Quote_or_link__c.field-meta.xml
<CustomField>
    <fullName>Attached_Quote_or_link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attached Quote or link</label>
    <type>Checkbox</type>
</CustomField>