unpackaged/main/default/objects/Opportunity/fields/Barbed_Tape_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Barbed_Tape_Opportunity__c</fullName>
    <description>Specifies if Fence opportunity is for Barbed Tape product</description>
    <label>Barbed Tape Opportunity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>