unpackaged/main/default/objects/Opportunity/fields/Bid_or_Buy__c.field-meta.xml
<CustomField>
    <fullName>Bid_or_Buy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid or Buy?</label>
    <type>Checkbox</type>
</CustomField>