unpackaged/main/default/objects/Opportunity/fields/Bid_or_Buy_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Bid_or_Buy_Picklist__c</fullName>
    <label>Bid or Buy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy_Immediate_Shipment</fullName>
                <label>Buy - Immediate Shipment</label>
            </value>
            <value>
                <fullName>Buy - Multiple Shipments</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Budgetary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>