unpackaged/main/default/objects/Opportunity/fields/Case_Study_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Case_Study_Opportunity__c</fullName>
    <label>Case Study Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>