unpackaged/main/default/objects/Opportunity/fields/Close_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Month__c</fullName>
    <description>Capture the text month value of the close date for use in reporting</description>
    <formula>CASE(MONTH( CloseDate ),1, &#39;1 - January&#39;,
2, &#39;2 - February&#39;,
3, &#39;3 - March&#39;,
4, &#39;4 - April&#39;,
5, &#39;5 - May&#39;,
6, &#39;6 - June&#39;,
7, &#39;7 - July&#39;,
8, &#39;8 - August&#39;,
9, &#39;9 - September&#39;,
10, &#39;10 - October&#39;,
11, &#39;11 - November&#39;,
12, &#39;12 - December&#39;,&#39;&#39;
)</formula>
    <label>Close Month</label>
    <type>Text</type>
</CustomField>