unpackaged/main/default/objects/Opportunity/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Additional Feedback / Issues Facing</inlineHelpText>
    <label>Comments</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>