unpackaged/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AK Tube</fullName>
            </value>
            <value>
                <fullName>American Tube &amp; Pipe</fullName>
            </value>
            <value>
                <fullName>Arcelor Mittal</fullName>
            </value>
            <value>
                <fullName>Bull Moose Tube</fullName>
            </value>
            <value>
                <fullName>Detroit Tube</fullName>
            </value>
            <value>
                <fullName>Epix Tube</fullName>
            </value>
            <value>
                <fullName>Indiana Steel &amp; Tube</fullName>
            </value>
            <value>
                <fullName>Jackson Tube</fullName>
            </value>
            <value>
                <fullName>Leavitt Tube (Maruichi Steel)</fullName>
            </value>
            <value>
                <fullName>Lockjoint Tube</fullName>
            </value>
            <value>
                <fullName>LP Tube</fullName>
            </value>
            <value>
                <fullName>Major Metals</fullName>
            </value>
            <value>
                <fullName>Marcegaglia USA</fullName>
            </value>
            <value>
                <fullName>Metal Matic</fullName>
            </value>
            <value>
                <fullName>Mid Ohio Tube</fullName>
            </value>
            <value>
                <fullName>Midwest Tube</fullName>
            </value>
            <value>
                <fullName>Parthenon Metal Works</fullName>
            </value>
            <value>
                <fullName>Phoenix Tube</fullName>
            </value>
            <value>
                <fullName>Shelby Welded Tube</fullName>
            </value>
            <value>
                <fullName>Southeast Tube</fullName>
            </value>
            <value>
                <fullName>Sterling Pipe &amp; Tube</fullName>
            </value>
            <value>
                <fullName>T&amp;B Tube</fullName>
            </value>
            <value>
                <fullName>Tapco Tube Company</fullName>
            </value>
            <value>
                <fullName>Tarter Tube</fullName>
            </value>
            <value>
                <fullName>Tube Tech</fullName>
            </value>
            <value>
                <fullName>United Tube Company</fullName>
            </value>
            <value>
                <fullName>Welded Tube of Canada</fullName>
            </value>
            <value>
                <fullName>Western Tube</fullName>
            </value>
            <value>
                <fullName>Wheatland Tube</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>