unpackaged/main/default/objects/Opportunity/fields/Competitor_Company__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Opportunities</relationshipLabel>
    <relationshipName>OpportunitiesToCompetitor</relationshipName>
    <type>Lookup</type>
</CustomField>