unpackaged/main/default/objects/Opportunity/fields/Cope_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cope_Opportunity__c</fullName>
    <description>Specifies if Electrical Opportunity is for Cope product.</description>
    <inlineHelpText>Specifies if Electrical Opportunity is for Cope product.</inlineHelpText>
    <label>Cope Opportunity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>