unpackaged/main/default/objects/Opportunity/fields/COVID_19__c.field-meta.xml
<CustomField>
    <fullName>COVID_19__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the opportunity is related to the COVID-19 pandemic.</description>
    <label>COVID-19</label>
    <type>Checkbox</type>
</CustomField>