unpackaged/main/default/objects/Opportunity/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>