unpackaged/main/default/objects/Opportunity/fields/Customer_Portal__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Portal</label>
    <type>Checkbox</type>
</CustomField>