unpackaged/main/default/objects/Opportunity/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <inlineHelpText>EBITDA of Target</inlineHelpText>
    <label>EBITDA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>