unpackaged/main/default/objects/Opportunity/fields/Electrical_IMC_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Electrical_IMC_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify IMC Conversion for tracking purposes (Electrical)</description>
    <inlineHelpText>Specify if opportunity is for IMC Conversion for tracking purposes.  If checked, the opportunity amount will roll-up to IMC Conversion dashboard charts.</inlineHelpText>
    <label>Electrical IMC Conversion</label>
    <type>Checkbox</type>
</CustomField>