unpackaged/main/default/objects/Opportunity/fields/Electrical_Kwik_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Kwik_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if opportunity is for Kwik Conversion for tracking (Electrical)</description>
    <inlineHelpText>Specify if opportunity is for Kwik Conversion for tracking.  If checked, the opportunity amount will roll-up to Kwik Conversion dashboard charts.</inlineHelpText>
    <label>Electrical Kwik Conversion</label>
    <type>Checkbox</type>
</CustomField>