unpackaged/main/default/objects/Opportunity/fields/Electrical_Large_End_User__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Large_End_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tracking to specific large end user metric (Electrical)</description>
    <inlineHelpText>Specify is opportunity is for Large End User for tracking.   If checked, the opportunity amount will roll-up to Large End User dashboard charts.</inlineHelpText>
    <label>Electrical Large End User</label>
    <type>Checkbox</type>
</CustomField>