unpackaged/main/default/objects/Opportunity/fields/Electrical_Region__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Region__c</fullName>
    <formula>IF(Owner.Chicago_Sales__c = &quot;Y&quot;, &quot;CHICAGO&quot;, 
IF(CONTAINS(Owner.Regions__c, &quot;ATC WEST&quot;), &quot;WEST&quot;, 
IF(CONTAINS(Owner.Regions__c, &quot;ATC EAST&quot;), &quot;EAST&quot;, 
IF(CONTAINS(Owner.Regions__c, &quot;ATC MIDWEST&quot;), &quot;MIDWEST&quot;, 
IF(OR(CONTAINS(Owner.Regions__c, &quot;ATC S. CENTRAL&quot;),CONTAINS(Owner.Regions__c, &quot;ATC SOUTHEAST&quot;)), &quot;SOUTH&quot;, &quot;&quot;)))))</formula>
    <label>Electrical Region</label>
    <type>Text</type>
</CustomField>