unpackaged/main/default/objects/Opportunity/fields/Electrical_Super_Kwik_Couple_Conduit__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Super_Kwik_Couple_Conduit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electrical Super Kwik Couple Conduit</label>
    <type>Checkbox</type>
</CustomField>