unpackaged/main/default/objects/Opportunity/fields/Electrical_Target_Growth_State_calc__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Target_Growth_State_calc__c</fullName>
    <formula>IF(ISBLANK(TEXT(Electrical_Target_Growth_State__c)), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Counts as 1 if any value has been selected - used to count when opportunities are targeted for growth in a particular state for electrical group.</inlineHelpText>
    <label>Electrical Target Growth State calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>