unpackaged/main/default/objects/Opportunity/fields/Engineer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the engineer, who assisted with product selection.</description>
    <inlineHelpText>Name of the engineer, who assisted with product selection.</inlineHelpText>
    <label>Engineer Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Title</field>
            <operation>contains</operation>
            <value>Engineer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Engineer)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>