unpackaged/main/default/objects/Opportunity/fields/EngineerCompany__c.field-meta.xml
<CustomField>
    <fullName>EngineerCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the engineering company, which assisted with product selection.</description>
    <inlineHelpText>Name of the engineering company, which assisted with product selection.</inlineHelpText>
    <label>Engineer Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Engineer)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>