unpackaged/main/default/objects/Opportunity/fields/Engineering_Requests_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Requests_Approval_Status__c</fullName>
    <label>Engineering Requests Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>