unpackaged/main/default/objects/Opportunity/fields/Exclusive_Process__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Process__c</fullName>
    <inlineHelpText>Upload executed LOI to the Notes &amp; Attachments section of the Opportunity</inlineHelpText>
    <label>Exclusive Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>