unpackaged/main/default/objects/Opportunity/fields/Expected_Tons__c.field-meta.xml
<CustomField>
    <fullName>Expected_Tons__c</fullName>
    <description>Expected Tons to be shipped for this opportunity</description>
    <label>Expected Tons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>