unpackaged/main/default/objects/Opportunity/fields/FLEX_Category__c.field-meta.xml
<CustomField>
    <fullName>FLEX_Category__c</fullName>
    <description>Category Formula created for Flexicon and Koreflex to replace the old Category Picklist which is currently used by Unistrut.</description>
    <formula>IF( Account.CommercientSF__Syspro_Customer_Record__r.CommercientSF__Branch__c = &quot;01&quot;, &quot;External Export&quot;, &quot;UK Sales&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>